First dashboard working version

--- a/ALS.Glance.Web/Views/Home/Index.cshtml
+++ b/ALS.Glance.Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                         <a href="@Url.Content("~/Content/Images/poster.png")" class="btn btn-default btn-lg"><i class="fa fa-university fa-fw"></i> <span class="network-name">Poster</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/smeegoan/als-glance" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/smeegoan/als-glance-lite" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                 </ul>
             </div>
