GetYearBounds implementation, bug fixes

--- a/ALS.Glance.Web/Views/Home/Patient.cshtml
+++ b/ALS.Glance.Web/Views/Home/Patient.cshtml
@@ -329,6 +329,7 @@
         $(function() {
             alsglance.resources = alsglance.resources || {
                 hour: '@Resources.PatientHour',
+                monthNameKey: '@Resources.MonthNameKey',
                 timeOfDayKey: '@Resources.PatientTimeOfDayKey',
                 timeOfDay: '@Resources.PatientTimeOfDay',
                 muscle: '@Resources.PatientMuscle',
